--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,15 @@
 <html>
     <head>
         <title>Heroku Notepad</title>
+        <script src="https://d3js.org/d3.v5.min.js"></script>
         <body>
             <h1>Heroku Notepad</h1>
             <h3>Test Data Base of {{name}}</h3>
+            <ul id='tasks'>
+
+
+            </ul>
+            <script src="{{ url_for('static', filename="js/main.js") }}"></script>
         </body>
     </head>
 </html>
