--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,32 @@
     <head>
         <title>Heroku Notepad</title>
         <script src="https://d3js.org/d3.v5.min.js"></script>
-        <body>
-            <h1>Heroku Notepad</h1>
-            <h3>Test Data Base of {{name}}</h3>
-            <ul id='tasks'>
+        <!-- CSS only -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-
-            </ul>
-            <script src="{{ url_for('static', filename="js/main.js") }}"></script>
-        </body>
+        <!-- JS, Popper.js, and jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     </head>
+    <body>
+        <div class="container">
+            <div class="jumbotron">
+            <h1 class="display-4 text-primary"> Heroku Notepad</h1>
+            <h3 class="lead">{{name}} 's Tasks</h3>
+            
+            <form>
+                <div class="form-group">
+                  <label for="task">New Task</label>
+                  <input type="text" class="form-control" id="new-task" aria-describedby="new task">
+                  <small id="task-help" class="form-text text-muted">Add in new task</small>
+                </div>
+                <button type="button" id='add-new-task' class="btn btn-primary">Submit</button>
+            </form>
+            <hr class="my-4"></hr>
+            <ul id='tasks' class="list-group"></ul>
+            </div>
+        </div>
+        <script src="{{ url_for('static', filename="js/main.js") }}"></script>
+        </body>
 </html>
